--- a/.env.prod
+++ b/.env.prod
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=base64:awwUNMDYKz5vQgdzYEPYhNxH/o9xFDDZOeKbxIR0UrE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://api.pokemath.com
-WEB_URL=http://www.pokemath.com
+APP_URL=http://api.pokemathgo.com
+WEB_URL=http://www.pokemathgo.com
 
 LOG_CHANNEL=stack
 
